# farkle_simulation

./: .gitignore  README.md  architecture.py  farkle_simulation.py  farkle_strategies.py  pipeline.py  pyproject.toml  requirements.txt  simple_action_reward_state_dict.pt  simple_action_reward_state_dict_0.pt  simple_action_reward_state_dict_1.pt  simple_action_reward_state_dict_2.pt  simple_action_reward_state_dict_3.pt  simple_action_reward_state_dict_4.pt  simple_action_reward_state_dict_5.pt  simple_action_reward_state_dict_6.pt  simple_action_reward_state_dict_7.pt  simple_action_reward_state_dict_8.pt  simple_action_reward_state_dict_9.pt  simple_farkle_rl.py  simulate_one_game.py  simulation.py  strategy.py  utils.py
.github/workflows/: python-publish.yml
archive/: convergence_naive_naive.csv  convergence_simple_rl_simple_rl.csv  farkle_simulation.py  histogram_naive_naive.csv  histogram_simple_rl_simple_rl.csv
src/farkle_simulation/: pipeline.py
src/farkle_simulation/components/: architecture.py  max_score.jsonl  simple_action_reward_state_dict.pt  simple_farkle_rl.py  simulation.py  strategy.py  utils.py
src/tables/: convergence_naive_simple_rl.csv  histogram_naive_simple_rl.csv  histogram_simple_rl_naive.csv  training_simple_rl.csv
tables/: convergence_naive_naive.csv  convergence_naive_simple_rl.csv  convergence_simple_rl_naive.csv  convergence_simple_rl_simple_rl.csv  histogram_naive_simple_rl.csv  histogram_simple_rl_naive.csv  training_simple_rl.csv
